[package]
name = "knyst_waveguide2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
knyst = { path = "../../knyst/knyst/", default-features = false }
# knyst = { git = "https://github.com/ErikNatanael/knyst.git", default-features = false }
dasp = { version = "0.11.0", features = ["signal"] }
num = "0.4.0"
biquad = "0.4.2"
# Fast approximation of common float math. Probably under BSD-3.
fastapprox = "0.3"

[dev-dependencies]
color-eyre = "0.6.2"
itertools = "0.12.0"
knyst = { path = "../../knyst/knyst/", features = ["jack", "cpal"] }
knyst_airwindows = { path = "../knyst_airwindows" }
anyhow = "^1.0"
# knyst = { git = "https://github.com/ErikNatanael/knyst.git", features = [
#   "jack",
# ] }
criterion = "0.5"

[[bench]]
name = "criterion"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
